Hamza: AI scan button added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="forget_pass">Forget Password</string>
     <string name="animals">Animals</string>
     <string name="birds">Birds</string>
+    <string name="aiScan">AI Scan</string>
 
 
     <!--    Alphabets     -->
